# Custom_OpenClash_Rules

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
attic/: README.md
cfg/: Custom_Clash_A1_Node.ini  Custom_Clash_A1_Node_Ext.ini  Custom_Clash_A1_Rule_Ext.ini  Custom_Clash_Full.ini  Custom_Clash_Full_Opt.ini  Custom_Clash_GFW.ini  Custom_Clash_Lite.ini  Custom_Clash_Mainland.ini  Custom_Clash_Opt.ini  Custom_Clash_Test.ini  README.md
doc/: README.md
game_rule/: Microsoft-Flight-Simulator-2020.yaml  Overwatch2_Asia(Singapore).yaml  README.md
overwrite/: Custom_Overwrite.conf  Custom_Overwrite_NoIPv6.conf  README.md
py/: README.md  generate_game_cdn.py  opt_cfg_generate.py
rule/: Custom_Direct.list  Custom_Direct_Classical.yaml  Custom_Direct_Classical_IP.yaml  Custom_Direct_Classical_Port.yaml  Custom_Direct_Domain.mrs  Custom_Direct_Domain.yaml  Custom_Direct_Full.list  Custom_Direct_IP.yaml  Custom_Direct_Merge.list  Custom_Direct_Merge.yaml  Custom_Port_Direct.yaml  Custom_Proxy.list  Custom_Proxy_2.list  Custom_Proxy_Classical.yaml  Custom_Proxy_Classical_A_AI.yaml  Custom_Proxy_Classical_A_ClickMe.yaml  Custom_Proxy_Classical_A_EU.yaml  Custom_Proxy_Classical_A_LinuxDo.yaml  Custom_Proxy_Classical_IP.yaml  Custom_Proxy_Domain.mrs  Custom_Proxy_Domain.yaml  Custom_Proxy_Full.list  Custom_Proxy_IP.yaml  Custom_Proxy_Merge.list  Encrypted_DNS_Classical.yaml  Encrypted_DNS_Classical_IP.yaml  Encrypted_DNS_Domain.yaml  Encrypted_DNS_IP.yaml  Game_Download_CDN.list  README.md  Steam_CDN.list  (+5 more)
(+82 files in other folders)
